--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 20;
 }
 
 .content {
@@ -12,7 +13,6 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgb(189, 189, 189)
 }
 
 footer {
@@ -22,6 +22,7 @@ footer {
   display: flex;
   justify-content: center;
   width: 100%;
+  z-index: 20;
 }
 
 .footer-container {
@@ -46,20 +47,32 @@ footer {
 
 h1 {
   font-size: 2rem;
+  color: white;
 }
 
 section {
   display: flex;
   align-items: center;
   flex-direction: column;
-  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
   margin-top: 10rem;
 }
 
 .resume-download {
-  background-color: yellow;
   padding: 2rem;
   margin-bottom: 2rem;
+}
+
+.resume-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 30rem;
 }
 
 .img-size {
@@ -69,6 +82,10 @@ section {
 
 .img-container {
   margin: 1rem;
+  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
+  background-color: rgb(0,0,0,0.50);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .flex-container {
@@ -82,6 +99,13 @@ section {
 li {
   list-style: none;
   font-size: 1.25rem;
+  color: white;
+  text-align: center;
+}
+
+.font-white {
+  color: white;
+  text-align: center;
 }
 
 a {
@@ -106,11 +130,23 @@ nav {
   padding: 2rem;
 }
 
-#about-me {
+.page-display {
   display: grid;
   grid-template-columns: 50% 50%;
-  background-color: white;
-  width: auto;
+  max-width: 900px;
+  margin-top: 10rem;
+  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
+  max-height: 713px;
+  background-color: rgb(0,0,0,0.30);
+}
+
+.page-display-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1150px;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .about-me-container {
@@ -123,14 +159,13 @@ nav {
 
 .about-picture-container {
   grid-column: 2 / span 1;
-  width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
 .profile-img {
-  object-fit: cover;
-  height: 45rem;
+  height: 100%;
+  object-fit: contain;
 }
 
 #portfolio {
@@ -139,5 +174,136 @@ nav {
 }
 
 span {
-  font-size: 1.5rem
+  font-size: 1.5rem;
+  color: white;
+}
+
+.page-blur {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#background-img {
+  background-image: url('./assets/background9.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+}
+
+#background-img2 {
+  background-image: url('./assets/background2.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  transition: 0s 360s;
+}
+
+#background-img3 {
+  background-image: url('./assets/background3.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  transition: 0s 360s;
+}
+
+.page-blur:hover ~ #background-img3 {
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  transition: 3s;
+}
+
+.page-blur:hover ~ #background-img2 {
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  transition: 3s;
+}
+
+.center-vh {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 20;
+  width: 90%;
+  max-width: 775px;
+}
+
+.center-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(150,150,150,0.15);
+  padding: 1rem;
+  padding-top: 2rem;
+  border-radius: 15px;
+  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
+}
+
+#pop-background {
+  background-image: url('./assets/background8.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  opacity: 0;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  transition: 3s 1s;
+}
+
+#pop-background2 {
+  background-image: url('./assets/background5.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  opacity: 0;
+  transition: 3s 1s;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+.center-vh:hover ~ #pop-background {
+  background-size: cover;
+  z-index: 3;
+  transition: 4s;
+  opacity: 1;
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
 }
