--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+
+h1, a, span, li {
+  font-family: Arial, Geneva, Helvetica, sans-serif;
+}
+
 header {
   position: -webkit-sticky;
   position: sticky;
@@ -60,12 +66,19 @@ section {
 .resume-download {
   padding: 2rem;
   margin-bottom: 2rem;
+  font-weight: bold;
+  text-shadow: 5px 5px 10px rgb(0,0,0,0.80);
+}
+
+.resume-font {
+  font-size: 2rem;
 }
 
 .resume-list {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-right: 2.5rem;
 }
 
 .center-flex {
@@ -138,6 +151,7 @@ nav {
   box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
   max-height: 713px;
   background-color: rgb(0,0,0,0.30);
+  border-radius: 15px;
 }
 
 .page-display-flex {
@@ -166,6 +180,8 @@ nav {
 .profile-img {
   height: 100%;
   object-fit: contain;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 #portfolio {
@@ -260,7 +276,7 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(150,150,150,0.15);
+  background-color: rgb(150,150,150,0.25);
   padding: 1rem;
   padding-top: 2rem;
   border-radius: 15px;
@@ -306,4 +322,51 @@ span {
   opacity: 1;
   filter: blur(0px);
   -webkit-filter: blur(0px);
+}
+
+.center-card {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 20;
+  background-color: rgba(40, 40, 40, 0.5);
+  border-radius: 15px;
+  transition: 3s 1s;
+  padding: 2rem;
+  box-shadow: 10px 10px 30px rgb(0,0,0,.75);
+}
+
+#background-img4 {
+  background-image: url('./assets/background4.jpg');
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+}
+
+.center-card:hover ~ #pop-background2 {
+  background-size: cover;
+  z-index: 3;
+  transition: 3s;
+  opacity: 1;
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+}
+
+label {
+  color: white;
+  margin-bottom: .5rem;
+  margin-top: 1rem;
+}
+
+.contact-column {
+  display: flex;
+  flex-direction: column;
 }
