--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+
 .App {
   text-align: center;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgb(28, 28, 28);
+}
+
+.content {
+  position: relative;
+  top: 4rem;
+  left: 0;
+}
+
+section {
+  padding: 1rem;
 }
 
 .App-logo {
