--- a/src/index.css
+++ b/src/index.css
@@ -1,383 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 
-h1, a, span, li {
+h1, a, span, li , div{
   font-family: Arial, Geneva, Helvetica, sans-serif;
-}
-
-header {
-  position: -webkit-sticky;
-  position: sticky;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 30;
-}
-
-.content {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  z-index: 20;
-}
-
-.footer-container {
-  display: flex;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.75);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  padding: .5rem 1rem 0 1rem;
-}
-
-.footer-icon {
-  margin: .5rem;
-}
-
-.page {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.page-width {
-  min-width: 450px;
-  max-width: 1150px;
-}
-
-h1 {
-  font-size: 2rem;
   color: white;
-}
-
-section {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 10rem;
-}
-
-.resume-download {
-  padding: 1rem;
-  margin: 2rem;
-  margin-bottom: 2rem;
-  font-weight: bold;
-  background-color: black;
-  border-radius: 20px;
-}
-
-.resume-download:hover {
-  box-shadow: 10px 10px 20px rgb(0,0,0,0.45);
-}
-
-.resume-font {
-  font-size: 1.5rem;
-}
-
-.resume-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-right: 2.5rem;
-}
-
-.center-flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 30rem;
-}
-
-.img-size {
-  height: 15rem;
-  width: 20rem;
-}
-
-.img-container {
-  margin: 1rem;
-  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
-  background-color: rgb(0,0,0,0.50);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-right: 2rem;
-  margin-left: 2rem;
-}
-
-li {
-  list-style: none;
-  font-size: 1.25rem;
-  color: white;
-  text-align: center;
-}
-
-.font-white {
-  color: white;
-  text-align: center;
-}
-
-a {
   text-decoration: none;
-  font-size: 1.5rem;
-  color: black;
-}
-
-.link {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.navActive {
-  color: white;
-}
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  padding: 2rem;
-  z-index: 20;
-}
-
-.page-display {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  max-width: 900px;
-  margin-top: 10rem;
-  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
-  max-height: 500px;
-  background-color: rgb(0,0,0,0.70);
-  border-radius: 15px;
-}
-
-.page-display-flex {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 1150px;
-  margin-top: 10rem;
-  margin-bottom: 10rem;
-}
-
-.about-me-container {
-  grid-column: 1 /span 1;
-  width: 100%;
-  display: flex;
-  margin: 2rem;
-  flex-direction: column;
-}
-
-.about-picture-container {
-  grid-column: 2 / span 1;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.profile-img {
-  height: 500px;
-  object-fit: cover;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-#portfolio {
-  display: flex;
-  flex-direction: column;
-}
-
-span {
-  font-size: 1.5rem;
-  color: white;
-}
-
-.page-blur {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-#background-img {
-  background-image: url('./assets/background9.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 2;
-}
-
-#background-img2 {
-  background-image: url('./assets/background2.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 2;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  transition: 0s 360s;
-}
-
-#background-img3 {
-  background-image: url('./assets/background3.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 2;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  transition: 0s 360s;
-}
-
-.page-blur:hover ~ #background-img3 {
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-  transition: 3s;
-}
-
-.page-blur:hover ~ #background-img2 {
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-  transition: 3s;
-}
-
-.center-vh {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 20;
-  width: 90%;
-  max-width: 775px;
-}
-
-.center-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(150,150,150,0.25);
-  padding: 1rem;
-  padding-top: 2rem;
-  border-radius: 15px;
-  box-shadow: 10px 10px 40px rgb(0,0,0,0.75);
-}
-
-#pop-background {
-  background-image: url('./assets/background8.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
-  opacity: 0;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  transition: 3s 1s;
-}
-
-#pop-background2 {
-  background-image: url('./assets/background5.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
-  opacity: 0;
-  transition: 3s 1s;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-}
-
-.center-vh:hover ~ #pop-background {
-  background-size: cover;
-  z-index: 3;
-  transition: 4s;
-  opacity: 1;
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-}
-
-.center-card {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 20;
-  background-color: rgba(40, 40, 40, 0.5);
-  border-radius: 15px;
-  transition: 3s 1s;
-  padding: 2rem;
-  box-shadow: 10px 10px 30px rgb(0,0,0,.75);
-}
-
-#background-img4 {
-  background-image: url('./assets/background4.jpg');
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 2;
-}
-
-.center-card:hover ~ #pop-background2 {
-  background-size: cover;
-  z-index: 3;
-  transition: 3s;
-  opacity: 1;
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-}
-
-label {
-  color: white;
-  margin-bottom: .5rem;
-  margin-top: 1rem;
-}
-
-.contact-column {
-  display: flex;
-  flex-direction: column;
 }
