--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,5 +1,5 @@
 .header-container {
-  z-index: 99;
+  z-index: 999;
   position: fixed;
   width: 100%;
   background-color: black;
@@ -34,22 +34,45 @@
 .dropdown {
   display: flex;
   flex-direction: column;
-  background-color: rgb(129, 129, 255, 0.9);
-  padding: 1rem;
+  background-color: rgb(129, 129, 255, .98);
+  padding: 0rem;
   height: 100%;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
 }
 
 #header-menu {
   display: none;
+  background-color: blue;
+  position: fixed;
+  z-index: 15;
+  left: 0;
+  top: 10rem;
 }
 
 .dropdown-container {
   position: fixed;
-  top: -17rem;
-  z-index: 20;
+  top: -100%;
+  z-index: 400;
   width: 100%;
   transition: all .7s ease-in-out;
+  height: 100%;
+  animation: bounce 1s forwards;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.83,.32,.11,.9);
+  animation-iteration-count: 1;
+  animation-play-state: paused;
+}
+
+.emoji-icon {
+  display: initial;
+  color: white;
+  font-size: 5rem;
+  position: absolute;
+  right: 30%;
+  top: -2rem;
 }
 
 .header-link {
@@ -57,11 +80,25 @@
   color: white;
   margin: .2rem;
   width: 100%;
-  padding: 0 1rem;
+  padding: 1.5rem;
   font-weight: bold;
+  font-size: 4rem;
+}
+
+.header-link:hover {
+  background-color: rgb(0,0,0,0.3);
+  width: 25rem;
 }
 
 #header-menu:checked ~ .dropdown-container {
-  top: 4rem;
-  transition: all .7s ease-in-out;
+  animation-play-state: running;
+}
+
+@keyframes bounce {
+  from {
+    transform: translate3d(0,0,0);
+  }
+  to {
+    transform: translate3d(0,100%,0);
+  }
 }
