--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -102,3 +102,9 @@
     transform: translate3d(0,100%,0);
   }
 }
+
+@media screen and (max-width: 800px) {
+  .header-link {
+    font-size: 2rem;
+  }
+}
