--- a/src/css/About.css
+++ b/src/css/About.css
@@ -347,21 +347,31 @@
     height: 5rem;
     width: 5rem;
     left: 3rem;
+    bottom: 17rem;
   }
 
   .cloud1-img {
     height: 3rem;
     width: 3rem;
+    bottom: 15rem;
+  }
+
+  .cloud2-img {
+    bottom: 18rem;
+    width: 3.5rem;
+    height: 3.5rem;
   }
 
   .cloud3-img {
     height: 4rem;
     width: 4rem;
+    bottom: 14rem;
   }
 
   .cloud4-img {
     height: 2.5rem;
     width: 2.5rem;
+    bottom: 17rem;
   }
 
   .about-profile-img {
@@ -380,5 +390,19 @@
   .about-details {
     font-size: .7rem;
     padding-left: 0rem;
+  }
+  
+  .fly-font {
+    font-size: 1.5rem;
+    bottom: 4rem;
+  }
+
+  .fly-again {
+    font-size: 1.5rem;
+    bottom: 4rem;
+  }
+
+  .sun-img {
+    bottom: 20rem;
   }
 }
