--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -61,3 +61,29 @@
     transform: translateX(-11rem)
   }
 }
+
+.portfolio-container {
+  width: 100%;
+  height: 40vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 13rem;
+  left: 0rem;
+}
+
+.project-contents {
+  border: .5rem solid white;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.view-project-font {
+  position: absolute;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold;
+}
