--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -159,7 +159,7 @@
 
 @keyframes detailsRight {
   from {
-    transform: translateY(-65vh)
+    transform: translateY(-26rem)
   }
   to {
     transform: translateY(0)
@@ -171,7 +171,7 @@
     transform: translateY(0)
   }
   to {
-    transform: translateY(-65vh)
+    transform: translateY(-26rem)
   }
 }
 
