--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,22 @@ h1, a, span, li , div {
 }
 
 .page {
-  width: 100%;
+  background-color: white;
   height: 100%;
-  position: absolute;
-  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: fixed;
+  align-items: center;
   left: 0;
+  top: 0;
 }
 
 .content {
   position: relative;
-  top: 4rem;
-  left: 0;
+  margin-top: 4rem;
+  max-width: 1200px;
   width: 100%;
   height: 100%;
   background-color: black;
