--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -23,8 +23,8 @@
   grid-column: 1 / span 1;
   margin: auto;
   height: 20rem;
-  width: 30rem;
-  object-fit: fill;
+  width: 100%;
+  object-fit: contain;
 }
 
 .project-container .project-section:nth-child(1n) div {
@@ -41,4 +41,16 @@
   grid-column: 1 / span 1;
   grid-row: 1 / span 1;
   margin: auto;
+}
+
+@media screen and (max-width: 500px) {
+  .project-container * {
+    font-size: .7rem;
+  }
+
+  .project-section {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
