--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -5,13 +5,16 @@
   max-width: 1200px;
   width: 100%;
   background-color: white;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
 }
 
 .project-section {
-  height: 20rem;
+  height: 100vh;
   display: grid;
   grid-template-columns: 50% 50%;
   padding: 1rem;
+  scroll-snap-align: start;
 }
 
 .project-container .project-section:nth-child(2n) {
