--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,11 +1,34 @@
 .home-font {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   color: white;
+  margin: 1rem 0;
 }
 
 .home-content {
   color: white;
+}
+
+li {
+  list-style: none;
+  font-size: 1rem;
+}
+
+ul b {
+  color: rgb(255, 152, 61);
+  font-weight: bold;
+}
+
+ul {
+  margin-block-start: 1rem;
+  padding-inline-start: 0px;
+}
+
+.home-content img {
+  max-width: 1200px;
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1250px) {
@@ -17,5 +40,9 @@
 @media screen and (max-width: 450px) {
   .home-font {
     font-size: 1.5rem;
+  }
+
+  li {
+    font-size: .7rem;
   }
 }
