--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -1,12 +1,18 @@
 .project-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   max-width: 1200px;
   width: 100%;
   background-color: white;
   scroll-snap-type: y mandatory;
-  overflow-y: auto;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  background: transparent;
+  width: 0;
 }
 
 .project-section {
@@ -18,7 +24,7 @@
 }
 
 .project-container .project-section:nth-child(2n) {
-  background-color: rgb(65, 65, 65);
+  background-color: rgb(145, 145, 145);
   color: white;
 }
 
@@ -54,6 +60,5 @@
   .project-section {
     display: flex;
     flex-direction: column;
-    height: 100%;
   }
 }
