--- a/src/css/About.css
+++ b/src/css/About.css
@@ -31,3 +31,59 @@
   border-radius: 50%;
   border: .3rem solid white;
 }
+
+.pictures-container {
+  display: grid;
+  grid-template-columns:  auto auto auto auto;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+  padding: 2rem;
+}
+
+.pictures-container img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.pictures-modal {
+  position: fixed;
+  top: 4rem;
+  margin-left: -2rem;
+  width: 100%;
+  max-width: 1200px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0,0,0,0.8);
+}
+
+.pictures-modal img {
+  width: 50%;
+  position: relative;
+  z-index: 10;
+}
+
+@media screen and (max-width: 1200px) {
+  .pictures-modal {
+    margin-left: 0;
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .pictures-container {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .pictures-container {
+    grid-template-columns: auto auto;
+  }
+
+  .pictures-modal img {
+    width: 90%;
+  }
+}
