--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -31,6 +31,97 @@ ul {
   object-fit: cover;
 }
 
+.page-load {
+  background-color: black;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 12;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  animation: pageLoad 4s forwards;
+}
+
+@keyframes pageLoad {
+  0% {
+    opacity: 1;
+    display: inline;
+  }
+  75% {
+    opacity: 1;
+    display: flex;
+  }
+  99% {
+    height: 100vh;
+    width: 100vw;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+    height: 0vh;
+    width: 0vw;
+  }
+}
+
+.load-container {
+  padding: 0 1.5rem;
+  animation: bounce 3s forwards;
+  animation-iteration-count: var(--cubic);
+}
+
+@keyframes bounce {
+  0% {
+    border-top: none;
+    }
+  5% {
+    border-top: none;
+  }
+  10% {
+    border-top: .5rem solid white;
+  }
+  30% {
+    border-left: .5rem solid white;
+  }
+  50% {
+    border-bottom: .5rem solid white;
+  }
+  70% {
+    border-right: .5rem solid white;
+  }
+  90% {
+    border: .5rem solid white;
+    transform: scale(1,1);
+  }
+  100% {
+    border: .5rem solid white;
+    transform: scale(0,0);
+  }
+}
+
+.load-container span {
+  color: white;
+  font-size: 4rem;
+  font-weight: bold;
+  animation: font 2s forwards;
+  animation-iteration-count: var(--cubic);
+}
+
+@keyframes font {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @media screen and (max-width: 1250px) {
   .home-font {
     font-size: 2rem;
