--- a/src/App.css
+++ b/src/App.css
@@ -16,16 +16,42 @@ h1, a, span, li , div {
 }
 
 .page {
-  background-color: white;
-  height: 100%;
-  width: 100%;
+  background-color: black;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
+  position: absolute;
   align-items: center;
   left: 0;
   top: 0;
+}
+
+.contact-link {
+  background-color: white;
+  position: fixed;
+  left: -1.7rem;
+  z-index: 12;
+  top: 8rem;
+  padding: 0 .5rem;
+  transform: rotate(90deg);
+  animation: fadeButton 4s infinite;
+  display: none;
+}
+
+@keyframes fadeButton {
+  0% {
+    background-color: white;
+    color: black;
+  }
+  50% {
+    background-color: black;
+    color: white;
+  }
+  100% {
+    background-color: white;
+    color: black;
+  }
 }
 
 .content {
@@ -35,10 +61,86 @@ h1, a, span, li , div {
   width: 100%;
   height: 100%;
   background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-links {
+  color: white;
+  position: fixed;
+  bottom: 5rem;
+  left: 0;
+  z-index: 12;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.social-links > i {
+  padding: 0.75rem 0;
+  font-size: 1.5rem
+}
+
+.social-links > i:nth-child(4) {
+  font-size: 1rem;
+  animation: dotAnim 3s infinite;
+}
+
+@keyframes dotAnim {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0.2;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+    transform: translateY(9rem);
+  }
+
+}
+
+.email-links {
+  color: white;
+  position: fixed;
+  width: 1rem;
+  bottom: 11.5rem;
+  padding: 1rem;
+  right: 0;
+  z-index: 12;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.email-links > span {
+  font-size: .8rem;
+  transform: rotate(90deg);
+}
+
+.email-links > i {
+  padding: .25rem;
+  font-size: 1.5rem;
+  position: relative;
+  bottom: -5rem;
+  font-size: 1rem;
+  animation: dotAnim 3s infinite;
 }
 
 section {
-  width: 100%;
+  max-width: 1000px;
+  width: 90%;
   height: 100%;
 }
 
@@ -50,16 +152,42 @@ section {
 }
 
 .page-content {
-  width: 1250px;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   padding: 1rem;
 }
 
 @media screen and (max-width: 1250px) {
   .page-content {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  section {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  section {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .social-links {
+    display: none;
+  }
+
+  .email-links {
+    display: none;
+  }
+
+  .contact-link {
+    display: initial;
   }
 }
 
