--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,3 +1,24 @@
-.contact-content {
+.contact-modal {
+  position: fixed;
   color: white;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  background-color: rgb(0,0,0,0.8);
+  z-index: 20;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-modal > div {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-modal > div > span {
+  padding: 1rem;
 }
