--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@ h1, a, span, li , div {
   text-decoration: none;
 }
 
+#root {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+}
+
 :root {
   --cubic: cubic-bezier(.62,.27,.56,.92);
 }
